--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,14 +1,9 @@
-body{
-    font-family: 'Roboto', sans-serif;
-}
 header{
     position: fixed;
     top: 0;
     width: 100%;
     .main_header{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        @include display-space-between;
         height: 160px;
         .header_left{
             .logo{
@@ -20,11 +15,9 @@ header{
             }
         }
         .header_right{
-            display: flex;
-            align-items: center;
+           @include display-align-center;
             ul{
-                display: flex;
-                align-items: center;
+                @include display-align-center;
                 list-style: none;
                 margin: 0 90px 0 0;
                 li{
