--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -1,7 +1,7 @@
-.icon-bell {
-  background: url(../../assets/icons/notification.svg) no-repeat center center;
-  background-size: auto 16px;
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-}
+// .icon-bell {
+//   background: url(../../assets/icons/notification.svg) no-repeat center center;
+//   background-size: auto 16px;
+//   width: 16px;
+//   height: 16px;
+//   display: inline-block;
+// }
