--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,7 @@
 @import "./home";
 
 
-
+* { margin:0; padding:0; box-sizing:border-box; }
 html,
 body {
   height: 100%;
@@ -14,6 +14,17 @@ body {
   scroll-behavior: smooth;
   position: relative;
 }
+
+.container-fluid {
+    max-width: 1440px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (max-width: 1280px){
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
 
 body {
   font-family: $default-font;
