--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,9 +3,20 @@ $default-font: 'Noto Sans KR', sans-serif;
 
 //PRIMARY COLORS
 
+$gradient-01: transparent linear-gradient(90deg, rgba(104, 159, 150, .8) 0%, rgba(154, 204, 168, .8) 100%) 0% 0% no-repeat padding-box;
+
 $black-222: #222222;
+$black-000: #000;
+
+$white-FF: #fff;
 
 $grey-CF: #CFCFCF;
+$grey-E0: #e0e0e0;
+
+$blue-68: #282d68;
+$blue-B3: #3c44b3;
+
+$green-9D: #00a99d;
 
 //buttons
 
