--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,9 +2,11 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
+    box-shadow: inset 0px 3px 6px rgba(212, 177, 177, 0.83);
+    background: $gradient-01;
     .main_header{
         @include display-space-between;
-        height: 160px;
+        height: 165px;
         .header_left{
             .logo{
                 height: 110px;
@@ -27,41 +29,27 @@ header{
                     }
                     a{
                         font-size: 23px;
-                        color: #fff;
+                        color: $white-FF;
                         line-height: 28px;
                         font-weight: 700;
                         text-transform: uppercase;
-                        transition: 0.2s;
+                       @include transition;
                         &.active{
-                            color: #282d68;
+                            color: $green-9D;
                         }
                     }
                     &:hover{
                         a{
-                            color: #282d68;
+                            color: $green-9D;
                             text-decoration: none;
-                            transition: 0.2s;
+                           @include transition;
                         }
                     }
                 }
             }
             .cta{
                 button{
-                    color: #fff;
-                    background: #282d68;
-                    border: 3px solid transparent;
-                    border-radius: 20px;
-                    height: 45px;
-                    padding: 10px 35px;
-                    font-size: 18px;
-                    line-height: 22px;
-                    text-transform: uppercase;
-                    transition: 0.2s;
-                    cursor: pointer;
-                    &:hover{
-                        border: 3px solid #fff;
-                        transition: 0.2s;
-                    }
+                    @include btn-blue;
                 }
             }
         }
@@ -77,12 +65,13 @@ header{
         max-width: 500px;
         width: 100%;
         padding: 20px;
-        background: #fff;
+        background: $white-FF;
+        border-radius: 5px;
         .modal_header{
             h1{
                 font-size: 28px;
                 line-height: 35px;
-                color: #000;
+                color: $black-000;
                 text-align: center;
             }
         }
@@ -95,10 +84,10 @@ header{
                         height: 40px;
                         padding: 10px;
                         width: 100%;
-                        border: 1px solid #e0e0e0;
-                        color: #222;
+                        border: 1px solid $grey-E0;
+                        color: $black-000;
                         &::placeholder{
-                            color: #222;
+                            color: $black-000;
                             opacity: 1;
                         }
                     }
@@ -106,31 +95,21 @@ header{
                         background: transparent;
                         width: 100%;
                         height: 40px;
-                        border: 1px solid #e0e0e0;
-                        color: #222;
+                        border: 1px solid $grey-E0;
+                        color: $black-000;
                         font-weight: 400;
                         padding: 6px;
                     }
                 }
                 .btn_submit{
-                    padding-top: 20px;
-                    color: #fff;
-                    background: #3c44b3;
-                    border: 3px solid transparent;
-                    border-radius: 20px;
-                    height: 40px;
-                    padding: 6px 35px;
-                    font-size: 16px;
-                    line-height: 22px;
-                    text-transform: uppercase;
-                    transition: 0.2s;
-                    cursor: pointer;
-                    margin: 40px auto 0;
+                    @include btn-blue;
+                    margin: 0 auto;
                     display: block;
                     &:hover{
-                        background: #fff;
-                        color: #3c44b3;
-                        border: 3px solid #3c44b3;
+                        @include transition;
+                        border: 3px solid $blue-68;
+                        background: $white-FF;
+                        color: $blue-68;
                     }
                 }
             }
