modal validation start

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,6 +18,8 @@ $blue-B3: #3c44b3;
 
 $green-9D: #00a99d;
 
+$red-F0: #ff0000;
+
 //buttons
 
 //Small tablets and large smartphones (landscape view)
