--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -21,9 +21,9 @@ header{
             ul{
                 @include display-align-center;
                 list-style: none;
-                margin: 0 90px 0 0;
+                margin: 0 87px 0 0;
                 li{
-                    margin-left: 35px;
+                    margin-left: 87px;
                     &:first-child{
                         margin-left: 0;
                     }
@@ -81,11 +81,13 @@ header{
                 .form_group{
                     margin-bottom: 15px;
                     input{
-                        height: 40px;
+                        height: 50px;
                         padding: 10px;
                         width: 100%;
                         border: 1px solid $grey-E0;
                         color: $black-000;
+                        font-size: 18px;
+                        font-weight: 400;
                         &::placeholder{
                             color: $black-000;
                             opacity: 1;
@@ -94,11 +96,18 @@ header{
                     select{
                         background: transparent;
                         width: 100%;
-                        height: 40px;
+                        height: 50px;
                         border: 1px solid $grey-E0;
                         color: $black-000;
                         font-weight: 400;
                         padding: 6px;
+                        font-size: 18px
+                    }
+                    span{
+                        margin-top: 5px;
+                        display: block;
+                        font-size: 12px;
+                        color: $red-F0;
                     }
                 }
                 .btn_submit{
@@ -107,9 +116,9 @@ header{
                     display: block;
                     &:hover{
                         @include transition;
-                        border: 3px solid $blue-68;
+                        border: 1px solid $green-9D;
                         background: $white-FF;
-                        color: $blue-68;
+                        color: $green-9D;
                     }
                 }
             }
