--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -38,7 +38,71 @@ header{
                             color: $green-9D;
                         }
                     }
+                    .header_dropdown{
+                        display: flex;
+                        height: 546px;
+                        background: $blue-6A;
+                        width: 100%;
+                        position: absolute;
+                        top: 165px;
+                        left: 0;
+                        visibility: hidden;
+                        opacity: 0;
+                        .dropdown_left{
+                            width: 45%;
+                            background: url(../assets/images/dropdown-bg.png) no-repeat center center;
+                            background-size: cover;
+                            .dropdown_img{
+                                width: 100%;
+                                height: 546px;
+                                @include display-justify-end;
+                                img{
+                                    width: auto;
+                                    height: 452px;
+                                    margin-right: 15%;
+                                }
+                            }
+                        }
+                        .dropdown_right{
+                            width: 55%;
+                            padding: 30px 61px;
+                            display: flex;
+                            flex-direction: column;
+                            .dropdown_right_content-wrap{
+                                margin-top: 103px;
+                                display: flex;
+                                flex-direction: column;
+                                &.row_reverse{
+                                    align-items: flex-end;
+                                }
+                                &:first-child{
+                                    margin-top: 0;
+                                }
+                            }
+                            .dropdown_right_content{
+                                max-width: 430px;
+                                h2{
+                                    font-size: 34px;
+                                    line-height: 35px;
+                                    font-weight: 700;
+                                    color: $white-FF;
+                                    text-transform: capitalize;
+                                }
+                                p{
+                                    color: $white-FF;
+                                    font-size: 26px;
+                                    line-height: 35px;
+                                    font-style: italic;
+                                    margin-top: 25px;
+                                }
+                            }
+                        }
+                    }
                     &:hover{
+                        .header_dropdown{
+                            visibility: visible;
+                            opacity: 1;
+                        }
                         a{
                             color: $green-9D;
                             text-decoration: none;
@@ -62,7 +126,7 @@ header{
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        max-width: 500px;
+        max-width: 600px;
         width: 100%;
         padding: 20px;
         background: $white-FF;
