--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -1,7 +1,14 @@
-// .icon-bell {
-//   background: url(../../assets/icons/notification.svg) no-repeat center center;
-//   background-size: auto 16px;
-//   width: 16px;
-//   height: 16px;
-//   display: inline-block;
-// }
+.icon-close {
+  background: url(../assets/icons/close-black.svg) no-repeat center center;
+  background-size: auto 16px;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+}
+.icon-quote {
+  background: url(../assets/icons/quote.png) no-repeat center center;
+  background-size: auto 38px;
+  width: 60px;
+  height: 38px;
+  display: inline-block;
+}
