--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -4,6 +4,7 @@ header{
     width: 100%;
     box-shadow: inset 0px 3px 6px rgba(212, 177, 177, 0.83);
     background: $gradient-01;
+    z-index: 3;
     .main_header{
         @include display-space-between;
         height: 165px;
@@ -40,12 +41,14 @@ header{
                     }
                     .header_dropdown{
                         display: flex;
-                        height: 546px;
+                        height: 400px;
                         background: $blue-6A;
                         width: 100%;
                         position: absolute;
+                        // top: -400px;
                         top: 165px;
                         left: 0;
+                        transition: all 400ms ease-in;
                         visibility: hidden;
                         opacity: 0;
                         .dropdown_left{
@@ -54,11 +57,11 @@ header{
                             background-size: cover;
                             .dropdown_img{
                                 width: 100%;
-                                height: 546px;
+                                height: 400px;
                                 @include display-justify-end;
                                 img{
                                     width: auto;
-                                    height: 452px;
+                                    height: 300px;
                                     margin-right: 15%;
                                 }
                             }
@@ -69,7 +72,7 @@ header{
                             display: flex;
                             flex-direction: column;
                             .dropdown_right_content-wrap{
-                                margin-top: 103px;
+                                margin-top: 53px;
                                 display: flex;
                                 flex-direction: column;
                                 &.row_reverse{
@@ -100,6 +103,7 @@ header{
                     }
                     &:hover{
                         .header_dropdown{
+                            // top: 165px;
                             visibility: visible;
                             opacity: 1;
                         }
@@ -128,15 +132,21 @@ header{
         transform: translate(-50%, -50%);
         max-width: 600px;
         width: 100%;
-        padding: 20px;
+        padding: 50px 20px 20px;
         background: $white-FF;
         border-radius: 5px;
         .modal_header{
+            @include display-space-between;
             h1{
                 font-size: 28px;
                 line-height: 35px;
                 color: $black-000;
                 text-align: center;
+            }
+            .close_btn{
+                position: absolute;
+                top: 20px;
+                right: 20px;
             }
         }
         .modal_body{
