--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -62,3 +62,14 @@
       transition: 0.2s;
   }
 }
+@mixin heading1 {
+  color: $black-000;
+  font-size: 40px;
+  line-height: 50px;
+  font-weight: 700;
+}
+@mixin description1 {
+  color: $black-000;
+  font-size: 25px;
+  line-height: 35px;
+}
