--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,15 +16,25 @@ body {
 }
 
 .container-fluid {
-    max-width: 1850px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    @media screen and (max-width: 1280px){
-      padding-left: 15px;
-      padding-right: 15px;
-    }
+  max-width: 1850px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (max-width: 1280px){
+    padding-left: 15px;
+    padding-right: 15px;
   }
+}
+.container-medium {
+  max-width: 1850px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (max-width: 1280px){
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
 
 body {
   font-family: $default-font;
@@ -79,3 +89,6 @@ select{
   margin: 0;
 }
 
+.sec {
+  padding: 80px 0;
+}
